Add unit tests and some improvements